Add workaround for Java 9 + Jython [2345]
It looks like Jython's PyJavaType needs to somehow be granted access to
every class on the CLASSPATH. Supplying "--permit-illegal-access"
effectively does that, but it generates a LOT of WARN messages.

Regardless, --permit-illegal-access allows pretty much all of McV
(except for the actual VisAD displays) to work exactly as expected!